--- a/META.yml
+++ b/META.yml
@@ -3,22 +3,17 @@ abstract: 'Wrapper around ps utility on unix'
 author:
   - justnoxx
 build_requires: {}
-configure_requires:
-  ExtUtils::MakeMaker: 6.30
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.86, CPAN::Meta::Converter version 2.133380'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: System-Process
 no_index:
   directory:
     - t
     - inc
-requires:
-  Carp: 0
-  POSIX: 0
 resources:
   repository: https://github.com/justnoxx/system-process
-version: 0.17
+version: '0.18'
